// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mapToMonitoringReportDtoArray should create a full monitoring report with the mapFullMonitoringReport function 1`] = `
Object {
  "addComments": null,
  "endDate": 2023-04-30T00:00:00.000Z,
  "headerId": "a072600000Bkbc8AAB",
  "lastUpdated": 2023-04-25T13:19:25.000Z,
  "periodId": 1,
  "projectId": "a0E2600000o7SHyEAM",
  "questions": Array [
    Object {
      "comments": "we're on fire!
<a href=\\"javascript:alert(1)\\" class=\\"govuk-heading-l\\">javascript
<p>",
      "description": "For each question score the project against the criteria from 1 to 5, providing a comment explaining your reason. Your Monitoring Portfolio Executive will return the report to you otherwise.",
      "displayOrder": 1,
      "isScored": true,
      "optionId": "a0926000004WYHuAAO",
      "options": Array [
        Object {
          "id": "a0926000004WYHsAAO",
          "questionScore": 5,
          "questionText": "The consortium has identified opportunities, beyond those specified in it's proposal, and plans to explore these within this project",
        },
        Object {
          "id": "a0926000004WYHtAAO",
          "questionScore": 4,
          "questionText": "The project remains on course to deliver all planned objectives",
        },
        Object {
          "id": "a0926000004WYHuAAO",
          "questionScore": 3,
          "questionText": "There is a possibility that the project will fail to deliver on all planned objectives",
        },
        Object {
          "id": "a0926000004WYHvAAO",
          "questionScore": 2,
          "questionText": "It appears highly likely that the project will fail to deliver on one or more key objectives",
        },
        Object {
          "id": "a0926000004WYHwAAO",
          "questionScore": 1,
          "questionText": "It is certain that the project will fail to deliver on one or more key objectives",
        },
      ],
      "responseId": "a072600000BkmTeAAJ",
      "title": "Scope",
    },
    Object {
      "comments": null,
      "description": null,
      "displayOrder": 2,
      "isScored": true,
      "optionId": "a0926000004WYI0AAO",
      "options": Array [
        Object {
          "id": "a0926000004WYHxAAO",
          "questionScore": 5,
          "questionText": "The project is running ahead of schedule",
        },
        Object {
          "id": "a0926000004WYHyAAO",
          "questionScore": 4,
          "questionText": "The project is meeting its planned timetable",
        },
        Object {
          "id": "a0926000004WYHzAAO",
          "questionScore": 3,
          "questionText": "Milestones and deliverables for the current period have been met but future ones appear to be \\"at risk\\"",
        },
        Object {
          "id": "a0926000004WYI0AAO",
          "questionScore": 2,
          "questionText": "Milestones and deliverables for the current period have slipped by up to three months",
        },
        Object {
          "id": "a0926000004WYI1AAO",
          "questionScore": 1,
          "questionText": "Milestones and deliverables for the current period have slipped by more than three months",
        },
      ],
      "responseId": "a072600000BkvniAAB",
      "title": "Time",
    },
    Object {
      "comments": "leo looks bemused",
      "description": null,
      "displayOrder": 3,
      "isScored": true,
      "optionId": "a0926000004WYI4AAO",
      "options": Array [
        Object {
          "id": "a0926000004WYI2AAO",
          "questionScore": 5,
          "questionText": "Under/overspend within +/- <5%. Accurate & evidenced forecasts in place across project. Expenditure is lower than expected for work done",
        },
        Object {
          "id": "a0926000004WYI3AAO",
          "questionScore": 4,
          "questionText": "Under/overspend within +/- 6-10%. Accurate & evidenced forecasts are in place. Expenditure is in line with planned activity and budget",
        },
        Object {
          "id": "a0926000004WYI4AAO",
          "questionScore": 3,
          "questionText": "Under/overspend within +/- 11-15%. Expenditure not commensurate with progress in some instances. Limited forecast evidence",
        },
        Object {
          "id": "a0926000004WYI5AAO",
          "questionScore": 2,
          "questionText": "Under/overspend within +/- 16-20%. Expenditure is not commensurate with progress. Forecasts not updated properly, and significantly inaccurate",
        },
        Object {
          "id": "a0926000004WYI6AAO",
          "questionScore": 1,
          "questionText": "Under/overspend +/- >21%. Expenditure is routinely not commensurate with progress. Forecasts not updated, and routinely inaccurate",
        },
      ],
      "responseId": "a072600000BkvtNAAR",
      "title": "Cost",
    },
    Object {
      "comments": null,
      "description": null,
      "displayOrder": 4,
      "isScored": true,
      "optionId": null,
      "options": Array [
        Object {
          "id": "a0926000004WYI7AAO",
          "questionScore": 5,
          "questionText": "Exceeding expectations",
        },
        Object {
          "id": "a0926000004WYI8AAO",
          "questionScore": 4,
          "questionText": "Good",
        },
        Object {
          "id": "a0926000004WYI9AAO",
          "questionScore": 3,
          "questionText": "Scope for improvement",
        },
        Object {
          "id": "a0926000004WYIAAA4",
          "questionScore": 2,
          "questionText": "Very poor",
        },
        Object {
          "id": "a0926000004WYIBAA4",
          "questionScore": 1,
          "questionText": "Unacceptable",
        },
      ],
      "responseId": null,
      "title": "Exploitation",
    },
    Object {
      "comments": null,
      "description": null,
      "displayOrder": 5,
      "isScored": true,
      "optionId": null,
      "options": Array [
        Object {
          "id": "a0926000004WYICAA4",
          "questionScore": 5,
          "questionText": "Exceeding expectations",
        },
        Object {
          "id": "a0926000004WYIDAA4",
          "questionScore": 4,
          "questionText": "Good practice",
        },
        Object {
          "id": "a0926000004WYIEAA4",
          "questionScore": 3,
          "questionText": "Scope for improvement",
        },
        Object {
          "id": "a0926000004WYIFAA4",
          "questionScore": 2,
          "questionText": "Very poor",
        },
        Object {
          "id": "a0926000004WYIGAA4",
          "questionScore": 1,
          "questionText": "Unacceptable",
        },
      ],
      "responseId": null,
      "title": "Risk management",
    },
    Object {
      "comments": null,
      "description": null,
      "displayOrder": 6,
      "isScored": true,
      "optionId": null,
      "options": Array [
        Object {
          "id": "a0926000004WYIHAA4",
          "questionScore": 5,
          "questionText": "Exceeding expectations",
        },
        Object {
          "id": "a0926000004WYIIAA4",
          "questionScore": 4,
          "questionText": "Good",
        },
        Object {
          "id": "a0926000004WYIJAA4",
          "questionScore": 3,
          "questionText": "Scope for improvement",
        },
        Object {
          "id": "a0926000004WYIKAA4",
          "questionScore": 2,
          "questionText": "Very poor",
        },
        Object {
          "id": "a0926000004WYILAA4",
          "questionScore": 1,
          "questionText": "Unacceptable",
        },
      ],
      "responseId": null,
      "title": "Project planning",
    },
    Object {
      "comments": null,
      "description": "Please summarise the project's key achievements and the key issues and risks that it faces.",
      "displayOrder": 7,
      "isScored": false,
      "optionId": "a0926000004WYIMAA4",
      "options": Array [
        Object {
          "id": "a0926000004WYIMAA4",
          "questionScore": 0,
          "questionText": "unknown question",
        },
      ],
      "responseId": "a072600000BkbcDAAR",
      "title": "Summary",
    },
    Object {
      "comments": null,
      "description": "Please confirm any specific issues that require Technology Strategy Board intervention - e.g. apparent scope change, partner changes, budget virements or time extensions.",
      "displayOrder": 8,
      "isScored": false,
      "optionId": "a0926000004WYINAA4",
      "options": Array [
        Object {
          "id": "a0926000004WYINAA4",
          "questionScore": 0,
          "questionText": "unknown question",
        },
      ],
      "responseId": "a072600000BkbcEAAR",
      "title": "Issues and actions",
    },
  ],
  "startDate": 2023-04-01T00:00:00.000Z,
  "status": 20,
  "statusName": "Draft",
}
`;

exports[`mapToMonitoringReportDtoArray should map the gql data only including fields on the picklist 1`] = `
Array [
  Object {
    "headerId": "0",
    "periodId": 1,
    "status": 20,
  },
  Object {
    "headerId": "1",
    "periodId": 2,
    "status": 40,
  },
  Object {
    "headerId": "2",
    "periodId": 3,
    "status": 30,
  },
  Object {
    "headerId": "3",
    "periodId": 0,
    "status": 0,
  },
]
`;

exports[`mapToMonitoringReportDtoArray should map the gql data to the correct Dtos filtering out for not New and not Claim Detail records 1`] = `
Array [
  Object {
    "endDate": 2022-04-24T00:00:00.000Z,
    "headerId": "0",
    "lastUpdated": 2022-04-24T00:00:00.000Z,
    "periodId": 1,
    "projectId": "1",
    "startDate": 2022-02-24T00:00:00.000Z,
    "status": 20,
    "statusName": "Draft label",
  },
  Object {
    "endDate": 2022-04-24T00:00:00.000Z,
    "headerId": "1",
    "lastUpdated": 2022-04-24T00:00:00.000Z,
    "periodId": 2,
    "projectId": "1",
    "startDate": 2022-02-24T00:00:00.000Z,
    "status": 40,
    "statusName": "Approved label",
  },
  Object {
    "endDate": 2022-04-24T00:00:00.000Z,
    "headerId": "2",
    "lastUpdated": 2022-04-24T00:00:00.000Z,
    "periodId": 3,
    "projectId": "1",
    "startDate": 2022-02-24T00:00:00.000Z,
    "status": 30,
    "statusName": "Awaiting IUK Approval label",
  },
  Object {
    "endDate": null,
    "headerId": "3",
    "lastUpdated": null,
    "periodId": 0,
    "projectId": "",
    "startDate": null,
    "status": 0,
    "statusName": "unknown-status",
  },
]
`;
